# mirrors

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
mirrors/: cargo.json  docker.json  gradle.json  maven.json  mix.json  mvn.json  npm.json  pip.json
process_arg_derive/: Cargo.toml
process_arg_derive/src/: lib.rs
select_mirror_derive/: Cargo.toml
select_mirror_derive/src/: lib.rs
src/: command.rs  main.rs
src/handle/: mod.rs
src/handle/apt/: mod.rs
src/handle/cargo/: mod.rs  object.rs
src/handle/docker/: mod.rs  object.rs
src/handle/gradle/: mod.rs
src/handle/maven/: mod.rs  object.rs
src/handle/mvn/: mod.rs  object.rs
src/handle/npm/: mod.rs
src/handle/pacman/: mod.rs
src/handle/pip/: mod.rs  object.rs
src/utils/: file_utils.rs  mod.rs  net_utils.rs  string_utils.rs
templates/: .npmrc  config.toml  daemon.json  init.gradle.kts  pip.conf  settings.xml
